--- a/javaStudy/workspace_html/mysite/assets/css/layout.css
+++ b/javaStudy/workspace_html/mysite/assets/css/layout.css
@@ -1,241 +1,272 @@
-
 @charset "UTF-8";
 
 /* 공통 */
 .clearfix::before,
 .clearfix::after {
-    display: block;
-    content: '';
-    line-height: 0;
+  display: block;
+  content: "";
+  line-height: 0;
 }
 
 .clearfix::after {
-    clear: both;
+  clear: both;
 }
 
 header + section {
-    padding: 30px 0 50px;
+  padding: 30px 0 50px;
 }
 
 .inner {
-    width: 100%;
-    max-width: 1000px;
-    margin: 0 auto;
-    box-sizing: border-box;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
+
+.wd-full {
+  width: 100%;
+}
+
 
 /* margin */
 .mt-05 {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 .mt-10 {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .mt-20 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .mt-30 {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .mb-05 {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .mb-10 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .mb-20 {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .mb-30 {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .btn-wrap {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .btn-wrap.justify-center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .btn-wrap.justify-end {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 /* button */
 .btn {
-    width: 110px;
-    border: 1px solid #ccc;
-    background: #eee;
-    min-height: 30px;
-    border-radius: 3px;
-    padding: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 110px;
+  border: 1px solid #ccc;
+  background: #eee;
+  min-height: 30px;
+  border-radius: 3px;
+  padding: 7px;
 }
 
 .input-group .btn {
-    height: 30px;
-    width: fit-content;
-    margin-left: 3px;
-    padding: 0 7px;
+  height: 30px;
+  width: fit-content;
+  margin-left: 3px;
+  padding: 0 7px;
 }
 
 .input-group .check-list {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .input-group .check-list > li {
-    display: flex;
-    align-items: center;
-    gap: 2px;
+  display: flex;
+  align-items: center;
+  gap: 2px;
 }
 
 /* input */
 .input-group {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.input-group + .input-group {
-    margin-top: 20px;
+.input-title {
+  flex-shrink: 0;
 }
 
-.input-group .input-title {
-    flex-shrink: 0;
+.custom-input {
+  width: 180px;
+  height: 30px;
+  border: 1px solid #ccc;
+  padding: 0 7px;
+  border-radius: 3px;
 }
 
-.input-group .custom-input {
-    width: 180px;
-    height: 30px;
-    border: 1px solid #ccc;
-    padding: 0 7px;
-    border-radius: 3px;
+.custom-input.wd-full {
+  width: 100%;
 }
 
-.input-group .custom-input.input-value {
-    border: 0;
-    font-weight: 700;
+.custom-input.input-value {
+  border: 0;
+  font-weight: 700;
+}
+
+textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 0 7px;
+  border-radius: 3px;
 }
 
 /* header */
 header .header-wrap {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 header .header-wrap .logo {
-    color: #77B206;
-    font-size: 35px;
-    font-weight: 700;
+  color: #77b206;
+  font-size: 35px;
+  font-weight: 700;
 }
 
 header .header-wrap .btn-wrap > * {
-    background: #fff;
-    border: 1px solid #ccc;
-    padding: 2px 5px;
-    border-radius: 3px;
-    font-size: 13px;
-    margin-left: 5px;
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 2px 5px;
+  border-radius: 3px;
+  font-size: 13px;
+  margin-left: 5px;
 }
 
 header .gnb {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    padding: 12px 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  padding: 12px 0;
 }
 
 header .gnb > li > a {
-    font-weight: 700;
-    font-size: 18px;
+  font-weight: 700;
+  font-size: 18px;
 }
 
 /* footer */
 footer .inner {
-    background: #ddd;
-    padding-top: 15px;
-    padding-bottom: 15px;
+  background: #ddd;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 footer .copyright {
-    font-size: 12px;
-    text-align: center;
-    color: #666;
+  font-size: 12px;
+  text-align: center;
+  color: #666;
 }
 
 /* side bar */
 .side-bar {
-    width: 200px;
-    flex-shrink: 0;
+  width: 200px;
+  flex-shrink: 0;
 }
 
 .side-bar h2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #ddd;
-    font-size: 18px;
-    font-weight: 700;
-    padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #ddd;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 20px 0;
 }
 
 .side-bar .list li {
-    padding: 10px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    margin-top: 5px;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  margin-top: 5px;
 }
 
 .side-bar .list li a {
-    display: block;
-    width: 100%;
-    height: 100%;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 /* content */
 .content-wrap {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .content-wrap > .content {
-    width: 100%;
+  width: 100%;
 }
 
 .page-title {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid #ccc;
-    padding: 20px 0 10px;
-    margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
+  padding: 20px 0 10px;
+  margin-bottom: 20px;
 }
 
 .page-title > h3 {
-    font-size: 16px;
-    font-weight: 700;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 .page-title .progress {
-    display: flex;
-    align-items: center;
-    font-size: 12px;
+  display: flex;
+  align-items: center;
+  font-size: 12px;
 }
 
 .page-title .progress > li:not(:last-child)::after {
-    content: '>';
-    padding: 0 5px;
+  content: ">";
+  padding: 0 5px;
+}
+
+/* pagination */
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.pagination > li {
+  padding: 0 10px;
+  color: #444;
+}
+
+.pagination > li.on {
+  color: #000;
+  font-weight: 700;
 }
