--- a/javaStudy/SpringBoot/jpa_example/frontend/src/style.css
+++ b/javaStudy/SpringBoot/jpa_example/frontend/src/style.css
@@ -1,3 +1,11 @@
+span, p, a {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
+	word-break: keep-all;
+}
+
 ol, ul {
 	list-style: none;
 	padding: 0;
@@ -9,21 +17,60 @@ a{
 }
 
 /* --------------------------------------- */
-button {
-	height: 25px;
+h1 {
+	margin-top: 0;
+	padding-top: 0.67em;	
+}
+
+.inner {
+	width: 100%;
+	max-width: 800px;
+	min-height: 100vh;
+	margin: 0 auto;
+	padding: 0 20px;
+	box-sizing: border-box;
+	border-left: 1px solid #ccc;
+	border-right: 1px solid #ccc;
 }
 
 .menu-list {
 	display: flex;
-	gap: 10px;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	padding: 10px;
+	box-sizing: border-box;
+	margin-left: -20px;
+	margin-right: -20px;
+	margin-bottom: 0;
 }
 
 .menu-list li {
 	transition: 0.1s;
+	font-size: 17px;
+	padding: 0 14px;
+	/* font-weight: 500; */
+	letter-spacing: -0.3px;
+}
+
+.menu-list li:first-child {
+	padding-left: 7px;
+}
+
+.menu-list li + li {
+	border-left: 1px solid #bbb;
 }
 
 .menu-list li:hover {
-	color: rgb(255, 136, 156);
+	color: rgb(243, 90, 115);
+}
+
+.menu-list.small {
+	margin-top: 0;
+	border-top: 0;
+}
+
+.menu-list.small li {
+	font-size: 15px;
 }
 
 .select-wrap {
@@ -34,5 +81,49 @@ button {
 
 .select-list {
 	display: flex;
-	gap: 5px;
+	gap: 8px;
+}
+
+.select-list li label {
+	margin-left: 2px;
+}
+
+.detail-input-list li {
+	margin-bottom: 10px;
+}
+
+.detail-input-list li label {
+	width: 80px;
+	display: inline-block;
+	font-weight: 500;
+}
+
+.userinfo-list li {
+	border: 1px solid #ccc;
+	padding: 20px;
+	box-sizing: border-box;
+	border-radius: 5px;
+	margin-bottom: 15px;
+}
+
+.userinfo-list li p + p {
+	margin-top: 10px;
+}
+
+.userinfo-list li p span {
+	display: inline-block;
+	width: 90px;
+	font-weight: 700;
+}
+
+.userinfo-list li a {
+	display: inline-block;
+	padding: 3px 10px;
+	box-sizing: border-box;
+	border: 1px solid rgb(243, 90, 115);
+	font-weight: 500;
+	color: rgb(243, 90, 115);
+	border-radius: 3px;
+	margin-top: 20px;
+	font-size: 15px;
 }
