--- a/javaStudy/React_study/customer_admin/src/App.css
+++ b/javaStudy/React_study/customer_admin/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+header nav {
+  display: flex;
+  gap: 8px;
+}
